--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "typescript-project",
+  "name": "discord-badge-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "type": "module",
-  "packageManager": "pnpm@10.6.5",
+  "description": "Bot do zdobycia odznaki aktywnego dewelopera Discord",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "prod": "cross-env NODE_ENV=production node dist/index.js",
-    "dev": "tsx .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.13.10",
-    "prettier": "^3.5.3",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.7"
-  }
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
